# wells

./: .gitignore  db_from_ai.py  dsl.py  pyproject.toml  ref_data.py  requirements.txt  set_deps.bat  test_dsl.py
data/: oil_gas_production.db
src/wells/: __init__.py  mapper.py
tests/: test_dsl.py
